[gd_scene load_steps=8 format=2]

[ext_resource path="res://OregonTrail/Fonts/Averia_Serif_Libre/AveriaSerifLibre-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://OregonTrail/Scenes/ChoicesBox.gd" type="Script" id=2]
[ext_resource path="res://OregonTrail/portraits/player.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 1 )

[node name="Beast" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Art" type="ColorRect" parent="Panel"]
margin_right = 234.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBorder" type="ColorRect" parent="Panel"]
margin_left = 234.0
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBox" type="ColorRect" parent="Panel/CharacterBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 81.0
margin_bottom = 175.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" type="Sprite" parent="Panel/CharacterBorder/CharacterBox"]
position = Vector2( 63, 13 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="HunterText" type="RichTextLabel" parent="Panel/CharacterBorder/CharacterBox/player"]
margin_left = -712.5
margin_top = -87.5
margin_right = -653.5
margin_bottom = -68.5
rect_scale = Vector2( 11.111, 11.111 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.2, 0.282353, 0.819608, 1 )
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterIcon" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox"]
margin_left = 5.0
margin_top = 27.0
margin_right = 25.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dead" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox/HunterIcon"]
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.262745, 0.219608, 0.219608, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterText" type="RichTextLabel" parent="Panel/CharacterBorder/CharacterBox/HunterIcon"]
margin_left = 25.0
margin_top = 28.0
margin_right = 75.0
margin_bottom = 41.0
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterIcon2" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox"]
margin_left = 5.0
margin_top = 51.0
margin_right = 25.0
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterText2" type="RichTextLabel" parent="Panel/CharacterBorder/CharacterBox/HunterIcon2"]
margin_left = 25.0
margin_top = -20.0
margin_right = 75.0
margin_bottom = -7.0
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dead2" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox/HunterIcon2"]
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.262745, 0.219608, 0.219608, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterIcon3" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox"]
margin_left = 5.0
margin_top = 75.0
margin_right = 25.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterText" type="RichTextLabel" parent="Panel/CharacterBorder/CharacterBox/HunterIcon3"]
margin_left = 25.0
margin_top = 4.0
margin_right = 75.0
margin_bottom = 17.0
custom_fonts/normal_font = SubResource( 1 )

[node name="Dead3" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox/HunterIcon3"]
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.262745, 0.219608, 0.219608, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterIcon4" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox"]
margin_left = 5.0
margin_top = 99.0
margin_right = 25.0
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterText" type="RichTextLabel" parent="Panel/CharacterBorder/CharacterBox/HunterIcon4"]
margin_left = 25.0
margin_top = 4.0
margin_right = 75.0
margin_bottom = 17.0
custom_fonts/normal_font = SubResource( 1 )

[node name="Dead4" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox/HunterIcon4"]
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.262745, 0.219608, 0.219608, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterIcon5" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox"]
margin_left = 5.0
margin_top = 123.0
margin_right = 25.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterText" type="RichTextLabel" parent="Panel/CharacterBorder/CharacterBox/HunterIcon5"]
margin_left = 25.0
margin_top = 4.0
margin_right = 75.0
margin_bottom = 17.0
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dead5" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox/HunterIcon5"]
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.262745, 0.219608, 0.219608, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterIcon6" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox"]
margin_left = 5.0
margin_top = 147.0
margin_right = 25.0
margin_bottom = 167.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterText" type="RichTextLabel" parent="Panel/CharacterBorder/CharacterBox/HunterIcon6"]
margin_left = 25.0
margin_top = 4.0
margin_right = 75.0
margin_bottom = 17.0
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dead6" type="ColorRect" parent="Panel/CharacterBorder/CharacterBox/HunterIcon6"]
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.262745, 0.219608, 0.219608, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="Panel"]
margin_top = 116.0
margin_right = 234.0
margin_bottom = 180.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="Panel/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 234.0
margin_bottom = 59.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="Panel/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 2.0
margin_right = 226.0
margin_bottom = 38.0
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="Panel/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 39.0
margin_right = 70.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 3 )
text = "Try and Fight it!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="Panel/ChoicesBorder/ChoicesBox"]
margin_left = 94.0
margin_top = 39.0
margin_right = 146.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 3 )
text = "Run Away!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice2" type="RichTextLabel" parent="Panel/ChoicesBorder/ChoicesBox"]
margin_left = 154.0
margin_top = 39.0
margin_right = 206.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 3 )
text = "Intimidate it"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="Panel/ChoicesBorder/ChoicesBox"]
margin_left = 14.0
margin_top = 41.0
margin_right = 16.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="Panel/ChoicesBorder/ChoicesBox"]
margin_left = 90.0
margin_top = 41.0
margin_right = 92.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer2" type="ColorRect" parent="Panel/ChoicesBorder/ChoicesBox"]
margin_left = 151.0
margin_top = 41.0
margin_right = 153.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}
